Ensure site doesn't break on browser resize

--- a/style.css
+++ b/style.css
@@ -41,8 +41,8 @@ body {
 
 .image-container .img-text {
     width: 100%;
-    height: 15%;
-    top: 42.5%;
+    height: 100px;
+    top: 270px;
     position: absolute;
     display: flex;
     justify-content: center;
@@ -98,6 +98,7 @@ body {
 
 .form-fields {
     height: 33.33vh;
+    min-height: 320px;
     padding: 10px 30px;
     height: 33.33vh;
     background-color: #f1f1f1;
